--- a/Actions/DCP_APP_SWITCHER/dcp_app_switcher.html
+++ b/Actions/DCP_APP_SWITCHER/dcp_app_switcher.html
@@ -94,6 +94,7 @@
     window.dcp_app_switcher = window.dcp_app_switcher || {};
     window.dcp_app_switcher.shortcuts = [SHORTCUT_APPLICATION];
 </script>
+<script src="lib/json2/json2.js?version=[WVERSION]"></script>
 <script src="lib/jquery/jquery.js?version=[WVERSION]"></script>
 <script src="lib/jquery-ui/js/jquery-ui.js?version=[WVERSION]"></script>
 <script src="DCP_APP_SWITCHER/Layout/dcp_app_switcher.js?version=[VERSION]"></script>
