Add core client to main page title (refs #3502)

--- a/Actions/DCP_APP_SWITCHER/dcp_app_switcher.html
+++ b/Actions/DCP_APP_SWITCHER/dcp_app_switcher.html
@@ -9,7 +9,7 @@
     <link href="DCP_APP_SWITCHER/Layout/dcp_app_switcher_ie.css?version=[VERSION]" rel="stylesheet" type="text/css"/>
     <![endif]-->
     <meta charset=utf-8/>
-    <title>[TEXT:DCP_APP_SWITCHER:Title]</title>
+    <title>[TEXT:DCP_APP_SWITCHER:Title] - [CORE_CLIENT]</title>
 </head>
 <body data-defaultapplication="[DEFAULT_APPLICATION_NAME]" data-clientname="[CORE_CLIENT]">
 <div class="css-header ui-widget-header">
