Some CSS update (refs #3502)

--- a/Actions/APP_SWITCHER/app_switcher.html
+++ b/Actions/APP_SWITCHER/app_switcher.html
@@ -3,10 +3,10 @@
 <head>
     <link rel="icon" href="CORE/Images/dynacase.ico">
     <link rel="SHORTCUT ICON" href="CORE/Images/dynacase.ico">
-    <link href="lib/jquery-ui/css/smoothness/jquery-ui.css?version=[WVERSION]" rel="stylesheet" type="text/css"/>
-    <link href="APP_SWITCHER/Layout/app_switcher.css?version=[VERSION]" rel="stylesheet" type="text/css"/>
+    <link href="lib/jquery-ui/css/smoothness/jquery-ui.css?wv=[WVERSION]" rel="stylesheet" type="text/css"/>
+    <link href="APP_SWITCHER/Layout/app_switcher.css?wv=[VERSION]" rel="stylesheet" type="text/css"/>
     <!--[if lt IE 8 ]>
-    <link href="APP_SWITCHER/Layout/app_switcher_ie.css?version=[VERSION]" rel="stylesheet" type="text/css"/>
+    <link href="APP_SWITCHER/Layout/app_switcher_ie.css?wv=[VERSION]" rel="stylesheet" type="text/css"/>
     <![endif]-->
     <meta charset=utf-8/>
     <title>[TEXT:APP_SWITCHER:Title] - [CORE_CLIENT]</title>
@@ -23,11 +23,11 @@
         </div>
     </div>
     <div class="css-logout css-header-right" title="[TEXT:APP_SWITCHER:Disconnect]">
-        <button id="disconnect"></button>
+        <button id="disconnect" class="css-disconnect-button"></button>
     </div>
     <div class="css-user-zone css-header-right">
         [IF DISPLAY_CHANGE_BUTTON]
-        <button id="userButton">[NAME]</button>
+        <button id="userButton" class="ui-button ui-state-default ui-corner-all css-user-button js-user-button ">[NAME]</button>
         [ENDIF DISPLAY_CHANGE_BUTTON]
         [IFNOT DISPLAY_CHANGE_BUTTON]
             [NAME]
@@ -97,11 +97,10 @@
 </form>
 <script>
     window.app_switcher = window.app_switcher || {};
-    window.app_switcher.shortcuts = [SHORTCUT_APPLICATION];
+    window.app_switcher.shortcuts = "[SHORTCUT_APPLICATION]";
 </script>
-<script src="lib/json2/json2.js?version=[WVERSION]"></script>
-<script src="lib/jquery/jquery.js?version=[WVERSION]"></script>
-<script src="lib/jquery-ui/js/jquery-ui.js?version=[WVERSION]"></script>
+<script src="lib/jquery/jquery.js?wv=[WVERSION]"></script>
+<script src="lib/jquery-ui/js/jquery-ui.js?wv=[WVERSION]"></script>
 <script src="[WIDGET_PASSWORD]"></script>
 <script src="APP_SWITCHER/Layout/app_switcher.js?version=[VERSION]"></script>
 </body>
