Some CSS enhancement (refs #3502)

--- a/Actions/APP_SWITCHER/app_switcher.html
+++ b/Actions/APP_SWITCHER/app_switcher.html
@@ -28,9 +28,9 @@
     <div class="css-user-zone css-header-right">
         [IF DISPLAY_CHANGE_BUTTON]
         <button id="userButton" class="ui-button ui-state-default ui-corner-all css-user-button js-user-button ">
-            <div class="css-application-icon">
-                <img src="Images/app-switcher-user-picture.png" alt="[ICON_ALT]"/>
-            </div>
+            <span class="css-application-icon css-user-icon">
+                <img src="Images/app-switcher-user-picture.png" alt="name icon"/>
+            </span>
             [NAME]
         </button>
         [ENDIF DISPLAY_CHANGE_BUTTON]
