--- a/Actions/APP_SWITCHER/app_switcher.html
+++ b/Actions/APP_SWITCHER/app_switcher.html
@@ -8,6 +8,9 @@
     <!--[if lt IE 8 ]>
     <link href="APP_SWITCHER/Layout/app_switcher_ie.css?wv=[VERSION]" rel="stylesheet" type="text/css"/>
     <![endif]-->
+    <!--[if IE 8 ]>
+    <link href="APP_SWITCHER/Layout/app_switcher_ie8.css?wv=[VERSION]" rel="stylesheet" type="text/css"/>
+    <![endif]-->
     <meta charset=utf-8/>
     <title>[TEXT:APP_SWITCHER:Title] - [CORE_CLIENT]</title>
 </head>
