Add autcolose for menu (closes #3622)
Add new error handling

--- a/Actions/APP_SWITCHER/app_switcher.html
+++ b/Actions/APP_SWITCHER/app_switcher.html
@@ -117,6 +117,7 @@
 <script>
     window.app_switcher = window.app_switcher || {};
     window.app_switcher.shortcuts = "[SHORTCUT_APPLICATION]";
+    window.app_switcher.errorTitle = "[TEXT:APP_SWITCHER:Error]";
 </script>
 <script src="lib/jquery/jquery.js?wv=[WVERSION]"></script>
 <script src="lib/jquery-ui/js/jquery-ui.js?wv=[WVERSION]"></script>
