Update menu handling (refs #3622)

--- a/Actions/APP_SWITCHER/app_switcher.html
+++ b/Actions/APP_SWITCHER/app_switcher.html
@@ -16,8 +16,8 @@
 </head>
 <body data-defaultapplication="[DEFAULT_APPLICATION_NAME]" data-clientname="[CORE_CLIENT]">
 <div class="css-header ui-widget-header">
-    <div class="css-menu css-header-left js-menu">
-        <div class="ui-button ui-state-default ui-corner-all css-selected-application">
+    <div class="css-menu css-header-left">
+        <div class="ui-button ui-state-default ui-corner-all css-selected-application js-menu">
             <span class="css-fold-menu js-fold-menu ui-icon ui-icon-triangle-1-e"></span>
 
             <div id="selected-application" class="css-selected-application-content">
