--- a/Actions/APP_SWITCHER/app_switcher.html
+++ b/Actions/APP_SWITCHER/app_switcher.html
@@ -118,6 +118,7 @@
     window.app_switcher = window.app_switcher || {};
     window.app_switcher.shortcuts = "[SHORTCUT_APPLICATION]";
     window.app_switcher.errorTitle = "[TEXT:APP_SWITCHER:Error]";
+    window.app_switcher.infoTitle = "[TEXT:APP_SWITCHER:Info]";
 </script>
 <script src="lib/jquery/jquery.js?wv=[WVERSION]"></script>
 <script src="lib/jquery-ui/js/jquery-ui.js?wv=[WVERSION]"></script>
