Add new style rules (refs #3931)

--- a/Actions/APP_SWITCHER/app_switcher.html
+++ b/Actions/APP_SWITCHER/app_switcher.html
@@ -3,8 +3,7 @@
 <head>
     <link rel="icon" href="CORE/Images/dynacase.ico">
     <link rel="SHORTCUT ICON" href="CORE/Images/dynacase.ico">
-    <link href="lib/jquery-ui/css/smoothness/jquery-ui.css?wv=[WVERSION]" rel="stylesheet" type="text/css"/>
-    <link href="APP_SWITCHER/Layout/app_switcher.css?wv=[VERSION]" rel="stylesheet" type="text/css"/>
+    [CSS:CUSTOMREF]
     <!--[if lt IE 8 ]>
     <link href="APP_SWITCHER/Layout/app_switcher_ie.css?wv=[VERSION]" rel="stylesheet" type="text/css"/>
     <![endif]-->
