Add favicon to appswitcher (refs #3941)

--- a/Actions/APP_SWITCHER/app_switcher.html
+++ b/Actions/APP_SWITCHER/app_switcher.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="icon" href="CORE/Images/dynacase.ico">
-    <link rel="SHORTCUT ICON" href="CORE/Images/dynacase.ico">
-    <link href="lib/jquery-ui/css/smoothness/jquery-ui.css?wv=[WVERSION]" rel="stylesheet" type="text/css"/>
-    <link href="APP_SWITCHER/Layout/app_switcher.css?wv=[VERSION]" rel="stylesheet" type="text/css"/>
+    <link rel="icon" href="[DYNACASE_FAVICO]" />
+    <link rel="shortcut icon" href="[DYNACASE_FAVICO]" />
+    [CSS:CUSTOMREF]
     <!--[if lt IE 8 ]>
     <link href="APP_SWITCHER/Layout/app_switcher_ie.css?wv=[VERSION]" rel="stylesheet" type="text/css"/>
     <![endif]-->
